# proto/gen/api/v1/apiv1connect/instance_service.connect.go
@@ -1,0 +1,111 @@
+// Code generated by protoc-gen-connect-go. DO NOT EDIT.
+//
+// Source: api/v1/instance_service.proto
+
+package apiv1connect
+
+import (
+	connect "connectrpc.com/connect"
+	context "context"
+	errors "errors"
+	v1 "github.com/pixb/go-server/proto/gen/api/v1"
+	http "net/http"
+	strings "strings"
+)
+
+// This is a compile-time assertion to ensure that this generated file and the connect package are
+// compatible. If you get a compiler error that this constant is not defined, this code was
+// generated with a version of connect newer than the one compiled into your binary. You can fix the
+// problem by either regenerating this code with an older version of connect or updating the connect
+// version compiled into your binary.
+const _ = connect.IsAtLeastVersion1_13_0
+
+const (
+	// InstanceServiceName is the fully-qualified name of the InstanceService service.
+	InstanceServiceName = "goserver.api.v1.InstanceService"
+)
+
+// These constants are the fully-qualified names of the RPCs defined in this package. They're
+// exposed at runtime as Spec.Procedure and as the final two segments of the HTTP route.
+//
+// Note that these are different from the fully-qualified method names used by
+// google.golang.org/protobuf/reflect/protoreflect. To convert from these constants to
+// reflection-formatted method names, remove the leading slash and convert the remaining slash to a
+// period.
+const (
+	// InstanceServiceGetInstanceProfileProcedure is the fully-qualified name of the InstanceService's
+	// GetInstanceProfile RPC.
+	InstanceServiceGetInstanceProfileProcedure = "/goserver.api.v1.InstanceService/GetInstanceProfile"
+)
+
+// InstanceServiceClient is a client for the goserver.api.v1.InstanceService service.
+type InstanceServiceClient interface {
+	// Gets the instance profile.
+	GetInstanceProfile(context.Context, *connect.Request[v1.GetInstanceProfileRequest]) (*connect.Response[v1.InstanceProfile], error)
+}
+
+// NewInstanceServiceClient constructs a client for the goserver.api.v1.InstanceService service. By
+// default, it uses the Connect protocol with the binary Protobuf Codec, asks for gzipped responses,
+// and sends uncompressed requests. To use the gRPC or gRPC-Web protocols, supply the
+// connect.WithGRPC() or connect.WithGRPCWeb() options.
+//
+// The URL supplied here should be the base URL for the Connect or gRPC server (for example,
+// http://api.acme.com or https://acme.com/grpc).
+func NewInstanceServiceClient(httpClient connect.HTTPClient, baseURL string, opts ...connect.ClientOption) InstanceServiceClient {
+	baseURL = strings.TrimRight(baseURL, "/")
+	instanceServiceMethods := v1.File_api_v1_instance_service_proto.Services().ByName("InstanceService").Methods()
+	return &instanceServiceClient{
+		getInstanceProfile: connect.NewClient[v1.GetInstanceProfileRequest, v1.InstanceProfile](
+			httpClient,
+			baseURL+InstanceServiceGetInstanceProfileProcedure,
+			connect.WithSchema(instanceServiceMethods.ByName("GetInstanceProfile")),
+			connect.WithClientOptions(opts...),
+		),
+	}
+}
+
+// instanceServiceClient implements InstanceServiceClient.
+type instanceServiceClient struct {
+	getInstanceProfile *connect.Client[v1.GetInstanceProfileRequest, v1.InstanceProfile]
+}
+
+// GetInstanceProfile calls goserver.api.v1.InstanceService.GetInstanceProfile.
+func (c *instanceServiceClient) GetInstanceProfile(ctx context.Context, req *connect.Request[v1.GetInstanceProfileRequest]) (*connect.Response[v1.InstanceProfile], error) {
+	return c.getInstanceProfile.CallUnary(ctx, req)
+}
+
+// InstanceServiceHandler is an implementation of the goserver.api.v1.InstanceService service.
+type InstanceServiceHandler interface {
+	// Gets the instance profile.
+	GetInstanceProfile(context.Context, *connect.Request[v1.GetInstanceProfileRequest]) (*connect.Response[v1.InstanceProfile], error)
+}
+
+// NewInstanceServiceHandler builds an HTTP handler from the service implementation. It returns the
+// path on which to mount the handler and the handler itself.
+//
+// By default, handlers support the Connect, gRPC, and gRPC-Web protocols with the binary Protobuf
+// and JSON codecs. They also support gzip compression.
+func NewInstanceServiceHandler(svc InstanceServiceHandler, opts ...connect.HandlerOption) (string, http.Handler) {
+	instanceServiceMethods := v1.File_api_v1_instance_service_proto.Services().ByName("InstanceService").Methods()
+	instanceServiceGetInstanceProfileHandler := connect.NewUnaryHandler(
+		InstanceServiceGetInstanceProfileProcedure,
+		svc.GetInstanceProfile,
+		connect.WithSchema(instanceServiceMethods.ByName("GetInstanceProfile")),
+		connect.WithHandlerOptions(opts...),
+	)
+	return "/goserver.api.v1.InstanceService/", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		switch r.URL.Path {
+		case InstanceServiceGetInstanceProfileProcedure:
+			instanceServiceGetInstanceProfileHandler.ServeHTTP(w, r)
+		default:
+			http.NotFound(w, r)
+		}
+	})
+}
+
+// UnimplementedInstanceServiceHandler returns CodeUnimplemented from all methods.
+type UnimplementedInstanceServiceHandler struct{}
+
+func (UnimplementedInstanceServiceHandler) GetInstanceProfile(context.Context, *connect.Request[v1.GetInstanceProfileRequest]) (*connect.Response[v1.InstanceProfile], error) {
+	return nil, connect.NewError(connect.CodeUnimplemented, errors.New("goserver.api.v1.InstanceService.GetInstanceProfile is not implemented"))
+}
