# proto/gen/api/v1/instance_service.pb.go
@@ -1,0 +1,193 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        (unknown)
+// source: api/v1/instance_service.proto
+
+package apiv1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Instance profile message containing basic instance information.
+type InstanceProfile struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// Version is the current version of instance.
+	Version string `protobuf:"bytes,1,opt,name=version,proto3" json:"version,omitempty"`
+	// Demo indicates if the instance is in demo mode.
+	Demo bool `protobuf:"varint,2,opt,name=demo,proto3" json:"demo,omitempty"`
+	// The first administrator who set up this instance.
+	// When null, instance requires initial setup (creating the first admin account).
+	Admin         *User `protobuf:"bytes,3,opt,name=admin,proto3" json:"admin,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *InstanceProfile) Reset() {
+	*x = InstanceProfile{}
+	mi := &file_api_v1_instance_service_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *InstanceProfile) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*InstanceProfile) ProtoMessage() {}
+
+func (x *InstanceProfile) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_instance_service_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use InstanceProfile.ProtoReflect.Descriptor instead.
+func (*InstanceProfile) Descriptor() ([]byte, []int) {
+	return file_api_v1_instance_service_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *InstanceProfile) GetVersion() string {
+	if x != nil {
+		return x.Version
+	}
+	return ""
+}
+
+func (x *InstanceProfile) GetDemo() bool {
+	if x != nil {
+		return x.Demo
+	}
+	return false
+}
+
+func (x *InstanceProfile) GetAdmin() *User {
+	if x != nil {
+		return x.Admin
+	}
+	return nil
+}
+
+// Request for instance profile.
+type GetInstanceProfileRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetInstanceProfileRequest) Reset() {
+	*x = GetInstanceProfileRequest{}
+	mi := &file_api_v1_instance_service_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetInstanceProfileRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetInstanceProfileRequest) ProtoMessage() {}
+
+func (x *GetInstanceProfileRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_v1_instance_service_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetInstanceProfileRequest.ProtoReflect.Descriptor instead.
+func (*GetInstanceProfileRequest) Descriptor() ([]byte, []int) {
+	return file_api_v1_instance_service_proto_rawDescGZIP(), []int{1}
+}
+
+var File_api_v1_instance_service_proto protoreflect.FileDescriptor
+
+const file_api_v1_instance_service_proto_rawDesc = "" +
+	"\n" +
+	"\x1dapi/v1/instance_service.proto\x12\x0fgoserver.api.v1\x1a\x13api/v1/common.proto\x1a\x1cgoogle/api/annotations.proto\"l\n" +
+	"\x0fInstanceProfile\x12\x18\n" +
+	"\aversion\x18\x01 \x01(\tR\aversion\x12\x12\n" +
+	"\x04demo\x18\x02 \x01(\bR\x04demo\x12+\n" +
+	"\x05admin\x18\x03 \x01(\v2\x15.goserver.api.v1.UserR\x05admin\"\x1b\n" +
+	"\x19GetInstanceProfileRequest2\x98\x01\n" +
+	"\x0fInstanceService\x12\x84\x01\n" +
+	"\x12GetInstanceProfile\x12*.goserver.api.v1.GetInstanceProfileRequest\x1a .goserver.api.v1.InstanceProfile\" \x82\xd3\xe4\x93\x02\x1a\x12\x18/api/v1/instance/profileB\xbb\x01\n" +
+	"\x13com.goserver.api.v1B\x14InstanceServiceProtoP\x01Z0github.com/pixb/go-server/proto/gen/api/v1;apiv1\xa2\x02\x03GAX\xaa\x02\x0fGoserver.Api.V1\xca\x02\x0fGoserver\\Api\\V1\xe2\x02\x1bGoserver\\Api\\V1\\GPBMetadata\xea\x02\x11Goserver::Api::V1b\x06proto3"
+
+var (
+	file_api_v1_instance_service_proto_rawDescOnce sync.Once
+	file_api_v1_instance_service_proto_rawDescData []byte
+)
+
+func file_api_v1_instance_service_proto_rawDescGZIP() []byte {
+	file_api_v1_instance_service_proto_rawDescOnce.Do(func() {
+		file_api_v1_instance_service_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_v1_instance_service_proto_rawDesc), len(file_api_v1_instance_service_proto_rawDesc)))
+	})
+	return file_api_v1_instance_service_proto_rawDescData
+}
+
+var file_api_v1_instance_service_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_v1_instance_service_proto_goTypes = []any{
+	(*InstanceProfile)(nil),           // 0: goserver.api.v1.InstanceProfile
+	(*GetInstanceProfileRequest)(nil), // 1: goserver.api.v1.GetInstanceProfileRequest
+	(*User)(nil),                      // 2: goserver.api.v1.User
+}
+var file_api_v1_instance_service_proto_depIdxs = []int32{
+	2, // 0: goserver.api.v1.InstanceProfile.admin:type_name -> goserver.api.v1.User
+	1, // 1: goserver.api.v1.InstanceService.GetInstanceProfile:input_type -> goserver.api.v1.GetInstanceProfileRequest
+	0, // 2: goserver.api.v1.InstanceService.GetInstanceProfile:output_type -> goserver.api.v1.InstanceProfile
+	2, // [2:3] is the sub-list for method output_type
+	1, // [1:2] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_api_v1_instance_service_proto_init() }
+func file_api_v1_instance_service_proto_init() {
+	if File_api_v1_instance_service_proto != nil {
+		return
+	}
+	file_api_v1_common_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_v1_instance_service_proto_rawDesc), len(file_api_v1_instance_service_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_v1_instance_service_proto_goTypes,
+		DependencyIndexes: file_api_v1_instance_service_proto_depIdxs,
+		MessageInfos:      file_api_v1_instance_service_proto_msgTypes,
+	}.Build()
+	File_api_v1_instance_service_proto = out.File
+	file_api_v1_instance_service_proto_goTypes = nil
+	file_api_v1_instance_service_proto_depIdxs = nil
+}
