# proto/gen/openapi.yaml
@@ -102,6 +102,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/v1/instance/profile:
+        get:
+            tags:
+                - InstanceService
+            description: Gets the instance profile.
+            operationId: InstanceService_GetInstanceProfile
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/InstanceProfile'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/v1/users:
         post:
             tags:
@@ -229,6 +248,22 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        InstanceProfile:
+            type: object
+            properties:
+                version:
+                    type: string
+                    description: Version is the current version of instance.
+                demo:
+                    type: boolean
+                    description: Demo indicates if the instance is in demo mode.
+                admin:
+                    allOf:
+                        - $ref: '#/components/schemas/User'
+                    description: |-
+                        The first administrator who set up this instance.
+                         When null, instance requires initial setup (creating the first admin account).
+            description: Instance profile message containing basic instance information.
         LoginRequest:
             required:
                 - username
@@ -428,4 +463,5 @@ components:
                     format: date-time
 tags:
     - name: AuthService
+    - name: InstanceService
     - name: UserService
